<resources>
    <string name="app_name">BellTime</string>
    <string name="zeroTime">00:00</string>
    <string name="dub">:</string>
    <string name="task">Урок</string>
    <string name="settings">Настройки</string>
    <string name="about_this">О приложении</string>
    <string name="call_through">Звонок через</string>
    <string name="time">Time</string>
    <string name="delete_line">Удалить эту строку?</string>
    <string name="add_a_schedule_in_the_settings">Добавьте расписание в настройках</string>
    <string name="lessons_are_over">Уроки закончились"</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="version">Версия 1.0.3</string>
    <string name="banner_ad_unit_id">ca-app-pub-3361690811677955/4538637435</string>
</resources>
